@@ -1,6 +1,11 @@
 Nef_S2 Package: Release changes
 ----------------------------------------------------------------------
 
+     - Fixed the use of the 'or' keyword as variable. Changed to 'sor'.
+     - Fixed handling of antipodal points in construction of Sphere_segment
+       from two sphere-points.
+     - Added std:: for 'endl' in include/CGAL/Nef_S2/SM_io_parser.h.
+
 1.2 (16 Apr 2002)
 
      - Fixed handling of antipodal points in construction of Sphere_circle
